--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  padding: 8px;
+}
+.right,
+.left{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+
 }
 
 .profile-image {
@@ -20,6 +32,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  /*flex:1;*/
 }
 
 .logo {
@@ -45,4 +58,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+
 }
