--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 52px;
 }
 
 img {
@@ -10,8 +14,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: 32px;
+  align-self: center;
+  text-align: center;
+  flex-basis: 100%;
+  
 }
-
+.item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  border: 1px solid black;
+}
+.text{
+  text-align: center;
+}
+div{
+  width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
