--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,8 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 15px;
+  gap: 10px;
 }
-
+.header{
+  font-size: 20px;
+  font-weight: bold;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,8 +39,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
-
+.top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -48,6 +59,11 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+}
+.info{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 button {
